[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.8", features = ['derive']}
promkit = "0.2.0"
notify-debouncer-full = "0.3.1"
notify = { version = "6.1.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = "1.0.192"
env_logger = "0.10.1"
log = "0.4.20"
dirs = "5.0.1"
serde_yaml = "0.9.27"
chrono = "0.4.31"
dotenv = "0.15.0"
chatgpt_rs = "1.2.3"
xattr = "1.0.1"
plist = "1.6.0"
serde_json = "1.0.108"

